fixing invisible text on website load

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 	src: url('fonts/NotoSans-Regular.ttf');
 	font-weight: normal;
 	font-style: normal;
+	font-display: swap;
 }
 
 body {
